--- a/src/scss/text_gradient.scss
+++ b/src/scss/text_gradient.scss
@@ -2,18 +2,26 @@
   background: -webkit-linear-gradient(#6a11cb, #27aae7);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #0000;
+  display: block;
 }
+
 ._yd-gradient-textColor-adjust-on-logo-alt {
   background: -webkit-linear-gradient(left, #6a11cb, #27aae7);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #0000;
+  display: block;
 }
+
 ._yd-gradient-textColor-adjust-on-logo-alt-brightness {
   background: -webkit-linear-gradient(left, #665199, #37b3eb);
   font-family: Playfair Display SC Bold, serif;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   filter: drop-shadow(0 0 10px #020a0d);
+  text-shadow: 0px 0px #0000;
+  display: block;
 }
 
 // 50 -> gradient
@@ -21,6 +29,8 @@
   background: -webkit-linear-gradient(#ede3f7, #dbf4ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #0000;
+  display: block;
 }
 
 // 100 -> gradient
@@ -28,6 +38,8 @@
   background: -webkit-linear-gradient(#d3c0e7, #a8e4ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #0000;
+  display: block;
 }
 
 // 200 -> gradient
@@ -35,6 +47,9 @@
   background: -webkit-linear-gradient(#b994e0, #75d3ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #0000;
+  display: block;
+
 }
 
 // 300 -> gradient
@@ -42,6 +57,8 @@
   background: -webkit-linear-gradient(#9f62df, #4cc0f6);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+    text-shadow: 0px 0px #0000;
+  display: block;
 }
 
 // 400 -> gradient
@@ -49,6 +66,8 @@
   background: -webkit-linear-gradient(#842de1, #27aae7);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+    text-shadow: 0px 0px #0000;
+  display: block;
 }
 
 // 400 -> gradient
@@ -56,6 +75,8 @@
   background: -webkit-linear-gradient(#842de1 -130%, #27aae7);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+    text-shadow: 0px 0px #0000;
+  display: block;
 }
 
 
@@ -64,6 +85,8 @@
   background: -webkit-linear-gradient(#6a11cb, #218aba);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+    text-shadow: 0px 0px #0000;
+  display: block;
 }
 
 // 600 -> gradient
@@ -71,6 +94,8 @@
   background: -webkit-linear-gradient(#5104a4, #226787);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+    text-shadow: 0px 0px #0000;
+  display: block;
 }
 
 // 700 -> gradient
@@ -78,6 +103,8 @@
   background: -webkit-linear-gradient(#390372, #1d4558);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+    text-shadow: 0px 0px #0000;
+  display: block;
 }
 
 // 800 -> gradient
@@ -85,6 +112,8 @@
   background: -webkit-linear-gradient(#200241, #0d2835);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+    text-shadow: 0px 0px #0000;
+  display: block;
 }
 
 // 900 -> gradient
@@ -92,4 +121,6 @@
   background: -webkit-linear-gradient(#07000f, #020a0d);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+    text-shadow: 0px 0px #0000;
+  display: block;
 }
